Correções no código e adaptações do BIS2.